--- a/style.css
+++ b/style.css
@@ -21,12 +21,20 @@ body {
   height: 50%;
   padding: 1rem;
   text-align: center;
+  background-color: #f0c695;
 }
 
 .intro img {
   max-width: 100%;
 	height: auto;
   border-radius: 50%;
+}
+
+.notice {
+  background-color: #f0c695;
+  padding: 0.6rem 1.3rem;
+  border-radius: 1rem;
+  display: inline-block;
 }
 
 .intro-content {
